Help updates: Fix broken search, format TOC

--- a/deploy/runtime/help/html/index.html
+++ b/deploy/runtime/help/html/index.html
@@ -20,7 +20,7 @@
          if (tmpCntx != "") defaulttopic = tmpCntx;
        }
     }
-document.write('<frameset cols="30%,*" frameborder="0" framespacing="1">');
+document.write('<frameset cols="240,*" frameborder="0" framespacing="1">');
 if (document.getElementById) {
   document.write('<frame name="hmnavigation" src="samhelp_content.htm" title="Navigation frame">'); }
 else {
@@ -31,7 +31,7 @@ document.write('</frameset>');
 </script>
 </head>
 <noscript>
-  <frameset cols="30%,*" frameborder="0" framespacing="1">
+  <frameset cols="240,*" frameborder="0" framespacing="1">
     <frame name="hmnavigation" src="samhelp_content.htm" title="Navigation frame">
     <frame name="hmcontent" src="introduction.htm" title="Content frame">
     <noframes>
