--- a/deploy/runtime/help/html/samhelp_content.htm
+++ b/deploy/runtime/help/html/samhelp_content.htm
@@ -12,14 +12,14 @@
        body { background:#0072C6; }
        .navbar   { font-size: 120%; }
 
-       .heading1 { font-family: Segoe UI,Helvetica; font-weight: bold; font-size: 10pt; color: #FFFFFF; text-decoration: none; }
+       .heading1 { font-family: Segoe UI,Helvetica; font-weight: normal; font-size: 12pt; color: #FFFFFF; text-decoration: none; }
        .heading2 { font-family: Segoe UI,Helvetica; font-weight: normal; font-size: 9pt; color: #FFFFFF; text-decoration: none; margin-left: 2px}
        .heading3 { font-family: Segoe UI,Helvetica; font-weight: normal; font-size: 8pt; color: #FFFFFF; text-decoration: none; margin-left: 4px }
        .heading4 { font-family: Segoe UI,Helvetica; font-weight: normal; font-size: 8pt; color: #FFFFFF; text-decoration: none; }
        .heading5 { font-family: Segoe UI,Helvetica; font-weight: normal; font-size: 8pt; color: #FFFFFF; text-decoration: none; }
        .heading6 { font-family: Segoe UI,Helvetica; font-weight: normal; font-size: 8pt; color: #FFFFFF; text-decoration: none; }
 
-       .hilight1 { font-family: Segoe UI,Helvetica; font-weight: bold; font-size: 10pt; color: #0072C6; background: #FFFFFF; text-decoration: none; }
+       .hilight1 { font-family: Segoe UI,Helvetica; font-weight: normal; font-size: 12pt; color: #0072C6; background: #FFFFFF; text-decoration: none; }
        .hilight2 { font-family: Segoe UI,Helvetica; font-weight: normal; font-size: 9pt; color: #0072C6; background: #FFFFFF; text-decoration: none; margin-left: 2px }
        .hilight3 { font-family: Segoe UI,Helvetica; font-weight: normal; font-size: 8pt; color: #0072C6; background: #FFFFFF; text-decoration: none; margin-left: 4px }
        .hilight4 { font-family: Segoe UI,Helvetica; font-weight: normal; font-size: 8pt; color: #0072C6; background: #FFFFFF; text-decoration: none; }
@@ -60,7 +60,7 @@
 <body>
 <p class="navbar" style="font:segoe ui;color:#FFFFFF;background:#0072C6;"><b>Contents</b>
 
- | <a href="search.php" style="font:segoe ui;color:#FFFFFF;background:#0072C6;text-decoration:none;">Search</a>
+ | <a href="samhelp_ftsearch.htm" style="font:segoe ui;color:#FFFFFF;background:#0072C6;text-decoration:none;">Search</a>
 </p>
 <hr/>
 
@@ -174,7 +174,7 @@
 </li>
 </ul>
 </li>
-<li class="heading1" id="i6" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a6" href="parabolic_trough_systems.htm" target="hmcontent"><span class="heading1" id="s6" ondblclick="return dblclicked(this)">Parabolic Trough System</span></a>
+<li class="heading1" id="i6" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a6" href="parabolic_trough_systems.htm" target="hmcontent"><span class="heading1" id="s6" ondblclick="return dblclicked(this)">Parabolic Trough</span></a>
 <ul id="ul6" style="list-style-type:none">
 <li class="heading2" id="i6.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a6.1" href="trough_system_costs.htm" target="hmcontent"><span class="heading2" id="s6.1">Trough System Costs</span></a>
 </li>
@@ -212,7 +212,7 @@
 </li>
 </ul>
 </li>
-<li class="heading1" id="i7" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a7" href="power_tower_systems.htm" target="hmcontent"><span class="heading1" id="s7" ondblclick="return dblclicked(this)">Power Tower System</span></a>
+<li class="heading1" id="i7" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a7" href="power_tower_systems.htm" target="hmcontent"><span class="heading1" id="s7" ondblclick="return dblclicked(this)">Power Tower</span></a>
 <ul id="ul7" style="list-style-type:none">
 <li class="heading2" id="i7.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a7.1" href="tower_system_costs.htm" target="hmcontent"><span class="heading2" id="s7.1">Tower System Costs</span></a>
 </li>
@@ -250,7 +250,7 @@
 </li>
 </ul>
 </li>
-<li class="heading1" id="i8" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a8" href="linear_fresnel.htm" target="hmcontent"><span class="heading1" id="s8" ondblclick="return dblclicked(this)">Linear Fresnel System</span></a>
+<li class="heading1" id="i8" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a8" href="linear_fresnel.htm" target="hmcontent"><span class="heading1" id="s8" ondblclick="return dblclicked(this)">Linear Fresnel</span></a>
 <ul id="ul8" style="list-style-type:none">
 <li class="heading2" id="i8.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a8.1" href="lf_location_and_resource.htm" target="hmcontent"><span class="heading2" id="s8.1">Location and Resource</span></a>
 </li>
@@ -266,7 +266,7 @@
 </li>
 </ul>
 </li>
-<li class="heading1" id="i9" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a9" href="dish_stirling.htm" target="hmcontent"><span class="heading1" id="s9" ondblclick="return dblclicked(this)">Dish Stirling System</span></a>
+<li class="heading1" id="i9" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a9" href="dish_stirling.htm" target="hmcontent"><span class="heading1" id="s9" ondblclick="return dblclicked(this)">Dish Stirling</span></a>
 <ul id="ul9" style="list-style-type:none">
 <li class="heading2" id="i9.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a9.1" href="dish_location_and_resource.htm" target="hmcontent"><span class="heading2" id="s9.1">Location and Resource</span></a>
 </li>
@@ -288,7 +288,7 @@
 </li>
 </ul>
 </li>
-<li class="heading1" id="i10" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a10" href="generic_solar_system.htm" target="hmcontent"><span class="heading1" id="s10" ondblclick="return dblclicked(this)">Generic Solar System</span></a>
+<li class="heading1" id="i10" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a10" href="generic_solar_system.htm" target="hmcontent"><span class="heading1" id="s10" ondblclick="return dblclicked(this)">CSP Generic Solar</span></a>
 <ul id="ul10" style="list-style-type:none">
 <li class="heading2" id="i10.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a10.1" href="gss_overview.htm" target="hmcontent"><span class="heading2" id="s10.1">Generic Solar Overview</span></a>
 </li>
@@ -524,7 +524,7 @@
 </li>
 </ul>
 </li>
-<li class="heading1" id="i26" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a26" href="sdk.htm" target="hmcontent"><span class="heading1" id="s26">Software Development Kit (SDK)</span></a>
+<li class="heading1" id="i26" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a26" href="sdk.htm" target="hmcontent"><span class="heading1" id="s26">Software Development Kit</span></a>
 </li>
 <li class="heading1" id="i27" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a27" href="samul.htm" target="hmcontent"><span class="heading1" id="s27" ondblclick="return dblclicked(this)">SamUL Scripting Language</span></a>
 <ul id="ul27" style="list-style-type:none">
