update showhelp parameters for hard-coded help topic id's

--- a/deploy/runtime/help/html/menus.htm
+++ b/deploy/runtime/help/html/menus.htm
@@ -140,7 +140,7 @@
 <tr style="text-align:left;vertical-align:top;">
 <td style="vertical-align:top; width:230px; padding:2px;"><p><img src="ss_menu-script.gif" width="218" height="307" alt="SS_Menu-Script" style="border:none" /></p>
 </td>
-<td style="vertical-align:top; width:593px; padding:2px;"><p class="p_Text"><span class="f_Text">The Developer menu displays commands for the <a href="samul.htm" class="topiclink">SamUL</a> development environment.</span></p>
+<td style="vertical-align:top; width:593px; padding:2px;"><p class="p_Text"><span class="f_Text">The Developer menu displays commands for the <a href="scripting.htm" class="topiclink">SamUL</a> development environment.</span></p>
 <p class="p_Term"><span class="f_Term">New SamUL Script</span></p>
 <p class="p_Definition"><span class="f_Definition">Create a new script, which appears as a tab in the SAM file.</span></p>
 <p class="p_Term"><span class="f_Term">Rename Script</span></p>
