--- a/deploy/runtime/help/html/samhelp_content.htm
+++ b/deploy/runtime/help/html/samhelp_content.htm
@@ -102,6 +102,8 @@
 </li>
 <li class="heading2" id="i2.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.10" href="file_formats.htm" target="hmcontent"><span class="heading2" id="s2.10">File Formats</span></a>
 </li>
+<li class="heading2" id="i2.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a2.11" href="registration.htm" target="hmcontent"><span class="heading2" id="s2.11">Registration</span></a>
+</li>
 </ul>
 </li>
 <li class="heading1" id="i3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a3" href="youtube_channel.htm" target="hmcontent"><span class="heading1" id="s3">Videos</span></a>
@@ -138,9 +140,11 @@
 </li>
 <li class="heading2" id="i5.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.6" href="pv_shading.htm" target="hmcontent"><span class="heading2" id="s5.6">Shading</span></a>
 </li>
-<li class="heading2" id="i5.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.7" href="pv_losses.htm" target="hmcontent"><span class="heading2" id="s5.7">Losses</span></a>
+<li class="heading2" id="i5.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.7" href="shade_calculator.htm" target="hmcontent"><span class="heading2" id="s5.7">Shade Calculator</span></a>
 </li>
-<li class="heading2" id="i5.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.8" href="pv_results.htm" target="hmcontent"><span class="heading2" id="s5.8">Results</span></a>
+<li class="heading2" id="i5.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.8" href="pv_losses.htm" target="hmcontent"><span class="heading2" id="s5.8">Losses</span></a>
+</li>
+<li class="heading2" id="i5.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a5.9" href="pv_results.htm" target="hmcontent"><span class="heading2" id="s5.9">Results</span></a>
 </li>
 </ul>
 </li>
@@ -554,7 +558,7 @@
 </li>
 <li class="heading1" id="i32" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a32" href="excel_exchange.htm" target="hmcontent"><span class="heading1" id="s32">Excel Exchange</span></a>
 </li>
-<li class="heading1" id="i33" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a33" href="samul.htm" target="hmcontent"><span class="heading1" id="s33">Macros and Scripting</span></a>
+<li class="heading1" id="i33" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a33" href="scripting.htm" target="hmcontent"><span class="heading1" id="s33">Macros and Scripting</span></a>
 </li>
 <li class="heading1" id="i34" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a34" href="sdk.htm" target="hmcontent"><span class="heading1" id="s34">Software Development Kit</span></a>
 </li>
