--- a/deploy/runtime/help/html/file_formats.htm
+++ b/deploy/runtime/help/html/file_formats.htm
@@ -58,7 +58,7 @@
 <p class="p_VariableName"><span class="f_VariableName">SMW</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Special <a href="weather_format.htm#smw" class="topiclink">weather file format</a> designed to work with the <a href="parabolic_trough_physical.htm" class="topiclink">physical trough model</a> and is designed to allow for sub-hourly simulations. The <a href="pvfp_flat_plate_pv.htm" class="topiclink">flat plate PV</a>, <a href="pvwatts.htm" class="topiclink">PVWatts</a>, and <a href="pvhcpv_high-x_concentrating_pv_hcpv.htm" class="topiclink">high-X concentrating PV</a> models also read this weather format.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">SUL</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">Text file containing <a href="samul.htm" class="topiclink">SamUL script</a> for automating SAM analyses.</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">Text file containing <a href="scripting.htm" class="topiclink">SamUL script</a> for automating SAM analyses.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">SRW</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Text file containing <a href="weather_format.htm#smw" class="topiclink">wind resource</a> data for the wind power model.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">TM2</span></p>
