--- a/deploy/runtime/help/html/wind_system_costs.htm
+++ b/deploy/runtime/help/html/wind_system_costs.htm
@@ -93,6 +93,71 @@
 <p class="p_VariableDescription"><span class="f_VariableDescription">A fixed annual cost proportional to the system's rated or nameplate capacity.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Variable Cost by Generation ($/MWh)</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">A variable annual cost proportional to the system's total annual electrical output in AC megawatt-hours. The annual energy output depends on either the performance model's calculated first year value and the </span><span class="f_CHInterfaceElement">Year-to-year decline in output</span><span class="f_VariableDescription"> value from the Performance Adjustment page, or on an annual schedule of costs, depending on the option chosen.</span></p>
+<h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">Balance of System Costs</span></h3>
+<p class="p_Text"><span class="f_Text">The Balance of System (BOS) Costs inputs apply only when you choose the </span><span class="f_CHInterfaceElement">Land-based installation</span><span class="f_Text"> option under </span><span class="f_CHInterfaceElement">NREL Capital Cost model</span><span class="f_Text">. SAM uses the BOS Costs inputs to calculate direct and indirect capital costs when you click </span><span class="f_CHInterfaceElement">Estimate Costs</span><span class="f_Text">.</span></p>
+<h4 class="p_Heading4"><span class="f_Heading4">Balance of System Model Inputs</span></h4>
+<p class="p_Text"><span style="font-family: Arial;">The Balance of System (BOS) model inputs are the parameters for a set of empirically-derived equations that the Wind BOS model uses to calculate the total installation cost.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Interconnect Voltage</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The voltage at the interconnection point between the project substation and the interconnecting utility substation.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Distance to Interconnect</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The distance of the interconnection power line connecting the project substation to the utility substation.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Site Terrain</span></p>
+<p class="p_VariableDescription"><span class="f_CHInterfaceElement">Flat to Rolling</span><span class="f_VariableDescription"> is a typical flat land site with little to no elevation change across the wind farm. </span></p>
+<p class="p_VariableDescription"><span class="f_CHInterfaceElement">Ridge Top</span><span class="f_VariableDescription"> terrain represents a layout with a few lines of turbines installed along the peak of one or more ridge lines.</span></p>
+<p class="p_VariableDescription"><span class="f_CHInterfaceElement">Mountainous</span><span class="f_VariableDescription"> is for a layout with groups of turbines on hilly terrain.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Turbine Layout</span></p>
+<p class="p_VariableDescription"><span class="f_CHInterfaceElement">Simple</span><span class="f_VariableDescription"> is a layout that tends to have repetition such as a simple grid or consistent number of turbines per string with consistent turbine spacing based on the rotor diameters of the turbines.</span></p>
+<p class="p_VariableDescription"><span class="f_CHInterfaceElement">Complex</span><span class="f_VariableDescription"> is appropriate for the </span><span class="f_CHInterfaceElement">Ridge Top</span><span class="f_VariableDescription"> and </span><span class="f_CHInterfaceElement">Mountainous</span><span class="f_VariableDescription"> terrain options with turbine positions that do not follow a pattern. There may be some scenarios where a simple layout may be appropriate for Ridge Top and Mountainous terrain.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Soil Conditions</span></p>
+<p class="p_VariableDescription"><span class="f_CHInterfaceElement">Standard</span><span class="f_VariableDescription"> is the default value and suitable for most projects. </span></p>
+<p class="p_VariableDescription"><span class="f_CHInterfaceElement">Buoyant</span><span class="f_VariableDescription"> is for sites with ground water levels closer to the surface that require larger turbne foundations.</span></p>
+<h4 class="p_Heading4"><span class="f_Heading4">Balance of System Estimated Inputs</span></h4>
+<p class="p_Text"><span class="f_Text">The the estimated inputs are values that you can choose to either have automatically calculated by the Wind BOS model (</span><span class="f_CHInterfaceElement">Use Estimated Value</span><span class="f_Text">), or type your own value (</span><span class="f_CHInterfaceElement">Use Input</span><span class="f_Text">). &nbsp;The Wind BOS model calculates the estimated values based on either the number of turbines in the wind farm or the wind farm's nameplate capacity in MW.</span></p>
+<p class="p_Text"><img src="windbos-inputvsestimated.gif" width="797" height="150" alt="windbos-inputvsestimated" style="border:none" /></p>
+<p class="p_VariableName"><span class="f_VariableName">Construction Time</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">Time in month to complete construction of the wind farm, assuming a single crane and a continuous project schedule, and calculated from the number of turbines.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">O&amp;M Building Size</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The total square footage of the O&amp;M building, including office space, kitchen space, restroom facilities, warehouse space for spare parts, and an overhead door, and calculated from the wind farm nameplate capacity. The model assumes that the project builds a new O&amp;M building on or near the wind farm site.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Temporary Met Towers</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The number of met towers installed temporarily and early in the project for verification of the wind resources. &nbsp;The model assumes one temporary met tower per 75 MW of wind farm capacity..</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Permanent Met Towers</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The number of permanent met towers required for power curve verification according to IEC 61400-12. &nbsp;The model assumes one permanent met tower per 100MW of wind farm nameplate capacity.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Wind/Weather Delay Days</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The number of days of construction delays due to inclement weather, calculated from the number of turbines. The model adds this value to the construction time for calculating additional costs that are included in the turbine erection cost.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Crane Breakdowns</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The number of times crane operation must stop during the construction period to break it down and move it to a different position, based upon the number of turbines. The model assumes that the crane must be broken down to move from one electrical array in the farm to another.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Access Road Entrances</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The number of entrances providing access to the wind farm, based on the number of turbines in the wind farm.</span></p>
+<h4 class="p_Heading4"><span class="f_Heading4">Balance of System Detailed Inputs</span></h4>
+<p class="p_Text"><span class="f_Text">The detailed inputs provide additional information about the project's construction when that information is available.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Delivery Assist Required</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">Check this box if you want the model to calculate costs associated with multiple handling of equipment. &nbsp;For example, if an OEM delivers all components to a lay-down yard, the developer might be responsible for additional transportation from the lay-down yard to the individual turbine pads.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Pad Mount Transformer Required</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">Check this box if the wind farm uses turbines that require a pad-mount transformer.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">New Switchyard Required</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">Check this box if the wind farm requires either a new switch-yard or upgrades to an existing switch-yard. When the box is checked, the model calculates switch-yard costs based on the collector and grid voltages.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Performance Bond</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">Some projects occasionally require a performance bond for construction of the project by the governing authority.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Medium Voltage (MV) Thermal Backfill</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The effects of poorly installed thermal backfills and soils may not be evident for many years, until cable loads increase and temperatures rise beyond allowable levels, resulting in cable failures. &nbsp;Proper thermal backfill is project-specific and requires knowledge of the cabling size and thermal loads in the trench.  </span></p>
+<p class="p_VariableName"><span class="f_VariableName">MV Overhead Collector</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">On some ridge top and mountainous terrain project sites with rocky soil, the cost of burying the collector system may be excessive. Use a non-zero value for the MV overhead collector value to model a wind farm with overhead medium-voltage lines instead of buried cable. (Note the rock trenching cost for buried cable is a separate input that you should adjust as needed.)</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Turbine Transportation</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The cost of transporting wind turbines to the wind farm site from the OEM factory or port when that cost is not included in the turbine cost.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Rock Trenching Required</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The percentage of total gravel/rock thermal backfill required to optimize soil thermal resistivity for collector cabling.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Contingency</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">A percentage of the BOS total costs set aside for unexpected costs that occur during the construction period.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Warranty Management</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">The cost of personnel to manage contracts during the warranty period and make any required claims as a percentage of the total balance of system costs.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Sales and Use Tax</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">Taxes on projects vary dramatically by counties and states, with some having Renewable Energy Zones without taxes. &nbsp;For more information on sales and use taxes in the United States, see the <a href="http://taxfoundation.org/article/state-and-local-sales-tax-rates-2013" target="_blank" class="weblink" title="http://taxfoundation.org/article/state-and-local-sales-tax-rates-2013">Tax Foundation</a> and <a href="http://www.dsireusa.org/summarytables/finre.cfm" target="_blank" class="weblink" title="http://www.dsireusa.org/summarytables/finre.cfm">DSIRE USA</a> websites.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Overhead</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">Percentage of the project budget for overhead costs such as administration, trailer rental, utilities, etc.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Profit Margin</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">Percentage of the BOS project that is being considered as the project profit margin for the BOS activities.</span></p>
+<p class="p_VariableName"><span class="f_VariableName">Development Fee</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">This is the accumulation of different costs of developing a project such as real estate, wind resource study, interconnection costs, environmental and permitting, etc. &nbsp;This could also include project profits created by the sale of the project from one developer to another developer.</span></p>
 
 </td></tr></table>
 
