help for beta release

--- a/deploy/runtime/help/html/cf_residential_and_commercial.htm
+++ b/deploy/runtime/help/html/cf_residential_and_commercial.htm
@@ -79,7 +79,7 @@
 <span style="width:48px">&nbsp;</span><span class="f_Note" style="font-style: italic;">Energy in Year n&gt;1 = Energy in Year n × (1 - </span><span class="f_EquationExcel">Year-to-Year Decline in Output</span><span class="f_Note" style="font-style: italic;"> in Year n)</span></p>
 <h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><a id="energyvalue"></a><span class="f_Heading3_atocs_">Energy Value ($)</span></h3>
 <p class="p_Text"><span class="f_Text">The energy value is the value of electricity that the project avoids purchasing because of the renewable energy system. The energy value in Year 1 is equal to the <a href="mtf_revenues.htm" class="topiclink">Net savings with system</a> reported in the Metrics table.</span></p>
-<p class="p_Text"><span class="f_Text">The energy value in Years 2 and later is the Year 1 value adjusted by the inflation rate from the <a href="financing_models.htm" class="topiclink">Financing</a> page, and the Out-year Escalation rate from the <a href="utility_rate.htm" class="topiclink">Utility Rate</a> page.</span></p>
+<p class="p_Text"><span class="f_Text">The energy value in Years 2 and later is the Year 1 value adjusted by the inflation rate from the <a href="financing_models.htm" class="topiclink">Financing</a> page, and the Out-year Escalation rate from the <a href="electricity_rates.htm" class="topiclink">Utility Rate</a> page.</span></p>
 <h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">LCOE</span></h3>
 <p class="p_Text"><span class="f_Text">The LCOE rows in the cash table show how SAM calculates the real and nominal <a href="mtf_lcoe.htm" class="topiclink">levelized cost of energy (LCOE)</a> values reported in the <a href="metrics_table.htm" class="topiclink">Metrics table</a>.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">NPV of After Tax Costflow - Nominal ($)</span></p>
@@ -146,7 +146,7 @@
 </td>
 <td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">DC Rating (kWdc)</span></p>
 </td>
-<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="pvwatts_solar_array.htm" class="topiclink">PVWatts Solar Array</a></span></p>
+<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="pvwatts_system_design.htm" class="topiclink">PVWatts Solar Array</a></span></p>
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
@@ -371,7 +371,7 @@
 </td>
 <td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">DC Rating (kWdc)</span></p>
 </td>
-<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="pvwatts_solar_array.htm" class="topiclink">PVWatts Solar Array</a></span></p>
+<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="pvwatts_system_design.htm" class="topiclink">PVWatts Solar Array</a></span></p>
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
