--- a/deploy/runtime/help/html/mt_capacity_factor.htm
+++ b/deploy/runtime/help/html/mt_capacity_factor.htm
@@ -65,7 +65,7 @@
 </td>
 <td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft">DC Rating (kWdc)</span></p>
 </td>
-<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="pvwatts_solar_array.htm" class="topiclink">PVWatts Solar Array</a></span></p>
+<td style="vertical-align:top; padding:0px;"><p class="p_TableTextLeft"><span class="f_TableTextLeft"><a href="pvwatts_system_design.htm" class="topiclink">PVWatts Solar Array</a></span></p>
 </td>
 </tr>
 <tr style="text-align:left;vertical-align:top;">
