--- a/deploy/runtime/help/html/mt_solar_fraction.htm
+++ b/deploy/runtime/help/html/mt_solar_fraction.htm
@@ -43,7 +43,7 @@
 <p class="p_EquationExcel"><span class="f_EquationExcel">Solar Fraction = Total Solar Energy Delivered to Tank (kWh/year) ÷ Total Energy Delivered to Tank (kWh/year)</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Where</span></p>
 <p class="p_EquationExcel"><span class="f_EquationExcel">Total Solar Energy Delivered to Tank (kWh) = Total Q Collector to Tank (kWh/year) + <a href="mtp_aux_w_wo_solar.htm" class="topiclink">Aux With Solar</a> (kWh/year)</span></p>
-<p class="p_VariableDescription"><span class="f_VariableDescription">and </span><span class="f_Emphasis">Total Q Collector to Tank i</span><span class="f_VariableDescription">s the sum of the <a href="pm_solar_water_heating.htm" class="topiclink">hourly</a> </span><span class="f_Emphasis">Q Collector to Tank</span><span class="f_VariableDescription"> values.</span></p>
+<p class="p_VariableDescription"><span class="f_VariableDescription">and </span><span class="f_Emphasis">Total Q Collector to Tank i</span><span class="f_VariableDescription">s the sum of the <a href="shw_results.htm" class="topiclink">hourly</a> </span><span class="f_Emphasis">Q Collector to Tank</span><span class="f_VariableDescription"> values.</span></p>
 
 </td></tr></table>
 
