--- a/deploy/runtime/help/html/registration.htm
+++ b/deploy/runtime/help/html/registration.htm
@@ -38,7 +38,7 @@
 
 <!-- Placeholder for topic body. -->
 <table style="width:100%;border:none;border-spacing:0px"><tr style="vertical-align:top"><td style="text-align:left;padding:5px">
-<p>Enter topic text here.</p>
+<p>&nbsp;</p>
 
 </td></tr></table>
 
