--- a/deploy/runtime/help/html/shw_system.htm
+++ b/deploy/runtime/help/html/shw_system.htm
@@ -43,7 +43,7 @@
 <span class="f_CHNote">&nbsp;</span><br />
 <span class="f_Note">The solar water heating model in SAM 2013.1.15 and earlier has been replaced with a new model that has similar but not identical input variables. If you use the current version of SAM to open file or case created with the previous model, SAM converts the input variables from the previous model to the new model as closely as possible. You should expect slightly different results between the old and new models. See <a href="shw_overview.htm#newmodel" class="topiclink">here</a> for details.</span><br />
 <span class="f_Note">&nbsp;</span><br />
-<span class="f_Note">You can explore the details of the SWH model by reviewing the hourly <a href="pm_solar_water_heating.htm" class="topiclink">performance model results</a>.</span></p>
+<span class="f_Note">You can explore the details of the SWH model by reviewing the hourly <a href="shw_results.htm" class="topiclink">performance model results</a>.</span></p>
 <h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">Hot Water Draw</span></h3>
 <p class="p_Text"><span class="f_Text">You must specify a set of 8,760 hourly values representing the hot water system's heating load. You can either import values from a text file, paste values from a spreadsheet or other file using your computer's clipboard, or type a set of 24-hour load profiles for each of the twelve months of the year, with the option of specifying separate profiles for weekdays and weekends.</span></p>
 <p class="p_Text"><span class="f_Text">See Specifying the Hot Water Draw for details.</span></p>
